Examples/test-suite/errors/pp_macro_args.i
%module xxx

#define foo(a,x) a x

#if foo
#endif

